--- a/reader/src/main/res/layout/reader_activity_home.xml
+++ b/reader/src/main/res/layout/reader_activity_home.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tv_hh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Reader module Activity" />
