--- a/reader/src/main/res/layout/reader_activity_home.xml
+++ b/reader/src/main/res/layout/reader_activity_home.xml
@@ -2,12 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical">
 
+    <include layout="@layout/view_appbar_layout" />
+
     <TextView
-        android:id="@+id/tv_hh"
+        android:id="@+id/tv_reader"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:text="Reader module Activity" />
 </LinearLayout>
